--- a/TS.Brokers.Api/TS.Brokers.Api.csproj
+++ b/TS.Brokers.Api/TS.Brokers.Api.csproj
@@ -6,10 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="LM.Response" Version="1.0.1" />
+    <PackageReference Include="Microsoft.Orleans.Client" Version="3.6.0" />
     <PackageReference Include="Microsoft.Orleans.Core" Version="3.6.0" />
-    <PackageReference Include="Microsoft.Orleans.Hosting.Kubernetes" Version="3.6.0" />
-    <PackageReference Include="Microsoft.Orleans.OrleansRuntime" Version="3.6.0" />
-    <PackageReference Include="Orleans.Persistence.Redis" Version="3.2.1" />
+    <PackageReference Include="Microsoft.Orleans.OrleansServiceBus" Version="3.6.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
