Compra e venda de ativo

--- a/TS.Brokers.GrainInterfaces/TS.Brokers.GrainInterfaces.csproj
+++ b/TS.Brokers.GrainInterfaces/TS.Brokers.GrainInterfaces.csproj
@@ -20,4 +20,8 @@
 		<ProjectReference Include="..\TS.Brokers.States\TS.Brokers.States.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Abstracts\" />
+	</ItemGroup>
+
 </Project>
