--- a/TS.Brokers.Api/TS.Brokers.Api.csproj
+++ b/TS.Brokers.Api/TS.Brokers.Api.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <Folder Include="Controllers\Default\" />
+    <Folder Include="Factories\Interfaces\" />
   </ItemGroup>
 
   <ItemGroup>
