--- a/TS.Brokers.Api/TS.Brokers.Api.csproj
+++ b/TS.Brokers.Api/TS.Brokers.Api.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Lib.AspNetCore.ServerSentEvents" Version="8.0.0" />
     <PackageReference Include="LM.Response" Version="1.0.1" />
     <PackageReference Include="Microsoft.Orleans.Client" Version="3.6.0" />
     <PackageReference Include="Microsoft.Orleans.Core" Version="3.6.0" />
@@ -14,7 +15,6 @@
 
   <ItemGroup>
     <Folder Include="Controllers\Default\" />
-    <Folder Include="Factories\Interfaces\" />
   </ItemGroup>
 
   <ItemGroup>
